--- a/rich.html
+++ b/rich.html
@@ -5,7 +5,7 @@
     <meta property="og:description" content="A BetterDiscord plugin to restore full timestamps in chat." />
     <meta property="og:image" content="https://img.shields.io/github/stars/iSweat-exe/BetterDiscord-BackToFullTimestamp?style=social" />
     <meta property="og:url" content="https://github.com/iSweat-exe/BetterDiscord-BackToFullTimestamp" />
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="https://repository-images.githubusercontent.com/952750350/0a1378cc-d126-4bfc-930f-a3b2725886cb">
     <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; URL='https://github.com/iSweat-exe/BetterDiscord-BackToFullTimestamp'" />
 </head>
