--- a/rich.html
+++ b/rich.html
@@ -3,11 +3,11 @@
 <head>
     <meta property="og:title" content="BetterDiscord - Back To Full Timestamp">
     <meta property="og:description" content="A BetterDiscord plugin to restore full timestamps in chat." />
-    <meta property="og:image" content="https://imgur.com/a/cxsONCl" />
+    <meta property="og:image" content="https://imgur.com/sVJ6Orp" />
     <meta property="og:url" content="https://github.com/iSweat-exe/BetterDiscord-BackToFullTimestamp" />
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://imgur.com/a/cxsONCl">
+    <meta name="twitter:image" content="https://imgur.com/sVJ6Orp">
 
     <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; URL='https://github.com/iSweat-exe/BetterDiscord-BackToFullTimestamp'" />
