--- a/rich.html
+++ b/rich.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>BetterDiscord - Back To Full Timestamp</title>
+    <meta name="description" content="A BetterDiscord plugin to restore full timestamps in chat.">
+    
+    <!-- Meta Tags -->
+    <meta property="og:url" content="https://isweat-exe.github.io/betterdiscord-backtofulltimestamp/rich.html?cachebuster=1">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="BetterDiscord - Back To Full Timestamp">
-    <meta property="og:description" content="A BetterDiscord plugin to restore full timestamps in chat." />
-    <meta property="og:image" content="https://imgur.com/sVJ6Orp.png" />
-    <meta property="og:url" content="https://github.com/iSweat-exe/BetterDiscord-BackToFullTimestamp" />
-
-    <meta name="twitter:card" content="https://imgur.com/sVJ6Orp.png">
+    <meta property="og:description" content="A BetterDiscord plugin to restore full timestamps in chat.">
+    <meta property="og:image" content="https://imgur.com/sVJ6Orp.png">
+    <meta property="og:image:width" content="1280">
+    <meta property="og:image:height" content="640">
+    
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="isweat-exe.github.io">
+    <meta property="twitter:url" content="https://isweat-exe.github.io/betterdiscord-backtofulltimestamp/rich.html?cachebuster=1">
+    <meta name="twitter:title" content="BetterDiscord - Back To Full Timestamp">
+    <meta name="twitter:description" content="A BetterDiscord plugin to restore full timestamps in chat.">
     <meta name="twitter:image" content="https://imgur.com/sVJ6Orp.png">
-
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; URL='https://github.com/iSweat-exe/BetterDiscord-BackToFullTimestamp'" />
 </head>
 <body>
 </body>
