--- a/rich.html
+++ b/rich.html
@@ -5,16 +5,17 @@
     <meta name="description" content="A BetterDiscord plugin to restore full timestamps in chat.">
     
     <!-- Meta Tags -->
+    <meta property="og:site_name" content="iSweat">
     <meta property="og:url" content="https://isweat-exe.github.io/betterdiscord-backtofulltimestamp/rich.html?cachebuster=1">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="BetterDiscord - Back To Full Timestamp">
+    <meta property="og:title" content="BetterDiscord - Back To Full Timestamp V1.1.3">
     <meta property="og:description" content="A BetterDiscord plugin to restore full timestamps in chat.">
     <meta property="og:image" content="https://imgur.com/sVJ6Orp.png">
     <meta property="og:image:width" content="1280">
     <meta property="og:image:height" content="640">
     
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="https://imgur.com/sVJ6Orp.png">
     <meta property="twitter:domain" content="isweat-exe.github.io">
     <meta property="twitter:url" content="https://isweat-exe.github.io/betterdiscord-backtofulltimestamp/rich.html?cachebuster=1">
     <meta name="twitter:title" content="BetterDiscord - Back To Full Timestamp">
