--- a/rich.html
+++ b/rich.html
@@ -7,12 +7,11 @@
     <!-- Meta Tags -->
     <meta property="og:url" content="https://isweat-exe.github.io/betterdiscord-backtofulltimestamp/rich.html?cachebuster=1">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="BetterDiscord - Back To Full Timestamp V1.1.3">
+    <meta property="og:title" content="iSweat | BetterDiscord - Back To Full Timestamp V1.1.3">
     <meta property="og:description" content="A BetterDiscord plugin to restore full timestamps in chat.">
     <meta property="og:image" content="https://imgur.com/sVJ6Orp.png">
     <meta property="og:image:width" content="1280">
     <meta property="og:image:height" content="640">
-    <meta name="author" content="iSweat"> 
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="https://imgur.com/sVJ6Orp.png">
@@ -21,16 +20,6 @@
     <meta name="twitter:title" content="BetterDiscord - Back To Full Timestamp">
     <meta name="twitter:description" content="A BetterDiscord plugin to restore full timestamps in chat.">
     <meta name="twitter:image" content="https://imgur.com/sVJ6Orp.png">
-    <meta name="twitter:creator" content="@isweatmc">
-
-    <!-- X Meta Tags -->
-    <meta name="X:card" content="https://imgur.com/sVJ6Orp.png">
-    <meta property="X:domain" content="isweat-exe.github.io">
-    <meta property="X:url" content="https://isweat-exe.github.io/betterdiscord-backtofulltimestamp/rich.html?cachebuster=1">
-    <meta name="X:title" content="BetterDiscord - Back To Full Timestamp">
-    <meta name="X:description" content="A BetterDiscord plugin to restore full timestamps in chat.">
-    <meta name="X:image" content="https://imgur.com/sVJ6Orp.png">
-    <meta name="X:creator" content="@isweatmc">
 </head>
 <body>
 </body>
