--- a/rich.html
+++ b/rich.html
@@ -3,6 +3,11 @@
 <head>
     <title>BetterDiscord - Back To Full Timestamp</title>
     <meta name="description" content="A BetterDiscord plugin to restore full timestamps in chat.">
+
+    <!-- Cache Control -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     
     <!-- Meta Tags -->
     <meta property="og:url" content="https://isweat-exe.github.io/betterdiscord-backtofulltimestamp/rich.html?cachebuster=1">
