--- a/rich.html
+++ b/rich.html
@@ -19,7 +19,7 @@
     <meta property="og:image:height" content="640">
     
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="https://imgur.com/sVJ6Orp.png">
+    <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="isweat-exe.github.io">
     <meta property="twitter:url" content="https://isweat-exe.github.io/betterdiscord-backtofulltimestamp/rich.html?cachebuster=1">
     <meta name="twitter:title" content="BetterDiscord - Back To Full Timestamp">
