--- a/rich.html
+++ b/rich.html
@@ -10,6 +10,8 @@
     <meta http-equiv="Expires" content="0">
     
     <!-- Meta Tags -->
+    <meta name="author" content="iSweat">
+    <meta property="og:site_name" content="iSweat">
     <meta property="og:url" content="https://isweat-exe.github.io/betterdiscord-backtofulltimestamp/rich.html?cachebuster=1">
     <meta property="og:type" content="website">
     <meta property="og:title" content="iSweat | BetterDiscord - Back To Full Timestamp V1.1.3">
