--- a/rich.html
+++ b/rich.html
@@ -8,6 +8,9 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+
+    <!-- Redirect -->
+    <meta http-equiv="refresh" content="0;url=https://github.com/iSweat-exe/BetterDiscord-BackToFullTimestamp/tree/main">
     
     <!-- Meta Tags -->
     <meta name="author" content="iSweat">
